--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['<b>Wed Developer</b> ', '<b>Wed Designer</b>'],
+      strings: ['<b>Wed Developer</b> ', '<b>React JS Developer</b>'],
       typeSpeed: 50,
     });
   </script>
