added a new commit

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis.</div>
 			</div>
+			<div class="vertical">
+				<img src="images/mysql.png" alt="php" style="width:96px; position: relative; top: -73px; left: -31px; filter: grayscale(0%); transition: 0.5s ease; cursor: pointer;">
+				<div class="vertical-title">MySql</div>
+				<div class="vertical-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis.</div>
+			</div>
 		</div>
 	</section>
 	<!-- -------second-section-end------- -->
@@ -132,7 +139,7 @@
   <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['<b>Wed Developer</b> ', '<b>React JS Developer</b>'],
+      strings: ['<b>Wed Disgner</b> ', '<b>React dev</b>'],
       typeSpeed: 50,
     });
   </script>
