My second commit

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['<b>Wed Disgner</b> ', '<b>React dev</b>'],
+      strings: ['<b>Web Developer</b> ', '<b>React app devloper</b>'],
       typeSpeed: 50,
     });
   </script>
